--- a/ui/pantry-ui/src/app/product-view/product-view.component.html
+++ b/ui/pantry-ui/src/app/product-view/product-view.component.html
@@ -151,6 +151,38 @@
                 </mat-card-content>
             </mat-card>
 
+            <!-- Cooking Instructions -->
+            <mat-card *ngIf="product.cookingInstructions && product.cookingInstructions.length > 0">
+                <mat-card-header>
+                    <mat-card-title>Cooking Instructions</mat-card-title>
+                </mat-card-header>
+                <mat-card-content class="pt-2">
+                    <div *ngFor="let instruction of product.cookingInstructions; let last = last" class="mb-4">
+                        <div class="d-flex justify-content-between align-items-baseline mb-2 bg-light p-2 rounded">
+                            <h3 class="mat-h3 m-0">{{instruction.name.split(' - ').pop()}}</h3>
+                            <div class="d-flex gap-3 text-secondary small">
+                                <span *ngIf="instruction.prepTime" title="Prep Time"><mat-icon
+                                        style="font-size: 16px; width: 16px; height: 16px; vertical-align: text-bottom;">timer</mat-icon>
+                                    {{instruction.prepTime}}m</span>
+                                <span *ngIf="instruction.cookTime" title="Cook Time"><mat-icon
+                                        style="font-size: 16px; width: 16px; height: 16px; vertical-align: text-bottom;">outdoor_grill</mat-icon>
+                                    {{instruction.cookTime}}m</span>
+                            </div>
+                        </div>
+
+                        <p *ngIf="instruction.description" class="text-secondary small fst-italic mb-2">
+                            {{instruction.description}}</p>
+
+                        <ol class="ps-3 mb-0">
+                            <li *ngFor="let step of instruction.steps" class="mb-1">
+                                {{step.instruction}}
+                            </li>
+                        </ol>
+                        <mat-divider *ngIf="!last" class="mt-3"></mat-divider>
+                    </div>
+                </mat-card-content>
+            </mat-card>
+
         </div>
     </div>
 
