--- a/ui/pantry-ui/src/app/kiosk-page/kiosk-page.component.html
+++ b/ui/pantry-ui/src/app/kiosk-page/kiosk-page.component.html
@@ -373,7 +373,7 @@
                         (click)="selectInstruction(instruction)">
                         <div class="flex flex-col items-center gap-2">
                             <mat-icon class="scale-150 mb-2">menu_book</mat-icon>
-                            <span>{{ instruction.name.split(' - ').pop() }}</span>
+                            <span>{{ (instruction.name || instruction.title).split(' - ').pop() }}</span>
                             <span class="text-sm font-normal opacity-75" *ngIf="instruction.totalTime">
                                 {{ instruction.totalTime }} mins
                             </span>
